--- a/基础/计算属性/计算属性.html
+++ b/基础/计算属性/计算属性.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>VUE DEMO</title>
     <script src="../../js/vue.js"></script>
+    <script src="../../js/lodash.js"></script>
 </head>
 <body>
 <div id="app">
@@ -20,6 +21,10 @@
     <!-- 计算setter -->
     <p>Setter show: "{{ setterShow }}"</p>
 
+    <!-- 观察 Watchers -->
+    <input type="text" v-model="question">
+    <p>{{answer}}</p>
+
 
 </div>
 <script>
@@ -28,7 +33,9 @@
         el: '#app',
         data: {
             message: 'hellovue',
-            prefix: 'prefix'
+            prefix: 'prefix',
+            answer: '',
+            question: ''
         },
         computed: {
             reversedMessage: function () {
@@ -48,11 +55,21 @@
                 }
             }
         },
+        // 响应数据变化时,执行异步或者开销较大的操作时, watch比较合适。
+        watch: {
+            question: function (newValue) {
+                this.answer = 'Waiting for you to stop typing...';
+                this.getAnswer();
+            }
+        },
         // 计算属性是基于它们的依赖进行缓存的, 计算属性只有在它的相关依赖发生变化的会后才会重新求值,而方法则每次都是重新运行
         methods: {
             reversedMessageFn: function () {
                 return this.message.split('').reverse().join('') + Date.now();
-            }
+            },
+            getAnswer: _.debounce(function () {
+                this.answer = 'This is an answer.';
+            }, 1500)
         }
     });
 </script>
