--- a/基础/表单控件绑定/基础用法.html
+++ b/基础/表单控件绑定/基础用法.html
@@ -45,6 +45,7 @@
 
     <br>
 
+    <!-- 选择列表 -->
     <select v-model="selected1">
         <option>A</option>
         <option>B</option>
@@ -62,6 +63,11 @@
     <br>
     <span>Selected: {{ selected2 }}</span>
 
+    <!-- 动态选项 -->
+    <select>
+        <option v-for="option in options" :value="option.value">{{option.text}}</option>
+    </select>
+
 
 </div>
 <script>
@@ -73,7 +79,20 @@
             checkedNames: [],
             picked: '',
             selected1: null,
-            selected2: []
+            selected2: [],
+
+            // 动态选项
+            selected: 'A',
+            options: [{
+                text: 'One',
+                value: 'A'
+            },{
+                text: 'Two',
+                value: 'B'
+            },{
+                text: 'Three',
+                value: 'C'
+            }]
         }
     });
 </script>
