--- a/基础/组件/自定义事件.html
+++ b/基础/组件/自定义事件.html
@@ -8,33 +8,36 @@
 <body>
 <div id="app">
     <!-- 自定义事件, 主要用于子组件向父组件传递数据 -->
-    <my-component></my-component>
+    <!-- 父组件可以在使用子组件的地方使用v-on来监听子组件触发的事件 -->
+    {{count}}
+    <my-component @increment="total"></my-component>
+    <my-component @increment="total"></my-component>
 
 </div>
 <script>
 
     Vue.component('my-component', {
-        template: '<div>A costom component!</div>'
+        template: '<div><button @click="subCounter">{{subCount}}</button></div>',
+        data: function () {
+            return {
+                subCount: 0
+            };
+        },
+        methods: {
+            subCounter: function () {
+                this.subCount += 1;
+                this.$emit('increment');
+            }
+        }
     });
     var app = new Vue({
         el: '#app',
         data: {
-            msg: '',
-            age: 0
+            count: 0
         },
-        components: {
-            'child-component': Child,
-            'data-test': {
-                template: '<button @click="counter += 1">{{counter}}</button>',
-                data: function () {
-                    // 返回同一数据对象引用会影响所有数据实例
-                    // return tmpData;
-
-                    // 返回独立数据则各组件data都是独立的
-                    return {
-                        counter: 0
-                    }
-                }
+        methods: {
+            total: function () {
+                this.count += 1;
             }
         }
     });
